<resources>
    <string name="app_name">Notes Squared</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to Notes-Squared!</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="login_text">Login</string>
    <string name="login_automatically">Login automatically</string>
    <string name="not_registered">Register</string>
    <string name="title_activity_note">Notes</string>
    <string name="preference_file_name">com.mural.hamzamuhammad.notes_squared.TEMP</string>
    <string name="auto_login_key">auto_login_key</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_launch">Notes Squared</string>
    <string name="title_activity_register">Register</string>
    <string name="registration_text">Please enter a valid email, and a username and password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="user_agreement">I agree to all the terms and conditions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_clear_list">Clear list</string>
    <string name="settings_delete_account">Delete account</string>
    <string name="settings_logout">Logout</string>
    <string name="save_settings">Save settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_edit">Edit</string>
    <string name="save_note">Save</string>
    <string name="new_note">New</string>
</resources>
