<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity" >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_event_note_black_48dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/usernameValue"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/enter_username"
            android:maxLength="15" />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/login_automatically"
            android:textSize="5pt"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_text" />

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered"
        android:textSize="5pt"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
