<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mural.hamzamuhammad.notes_squared.SettingsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_clear_list"
        android:id="@+id/clear_list_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="clearList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_delete_account"
        android:id="@+id/delete_account_button"
        android:layout_below="@+id/clear_list_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="deleteAccount" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_logout"
        android:id="@+id/logout_button"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/delete_account_button"
        android:layout_alignRight="@+id/clear_list_button"
        android:layout_alignEnd="@+id/clear_list_button"
        android:onClick="logoutAccount" />

</RelativeLayout>
